--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,12 @@ header{
     margin-bottom: 1rem;
     color: #37517E;
 }
+
+.blog{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.team{
+    margin-bottom: 40px;
+}
